feat: Add elasticsearch_dsl and refactor rss_feed_operator

--- a/notebooks/nlp_process.ipynb
+++ b/notebooks/nlp_process.ipynb
@@ -149,6 +149,7 @@
     "import os\n",
     "import spacy\n",
     "from hooks.elasticsearch_hook import ElasticsearchHook\n",
+    "from spacytextblob.spacytextblob import SpacyTextBlob # noqa: F401\n",
     "from spacy.language import Language\n",
     "\n",
     "# Define custom component to filter entities\n",
@@ -197,11 +198,13 @@
     "            sentiment = (\n",
     "                doc._.blob.sentiment.polarity\n",
     "            )  # Using spacytextblob for sentiment analysis\n",
-    "            \n",
+    "            vector = doc.vector.tolist()  # Convert vector to list for JSON serialization\n",
+    "\n",
     "            enriched_data = {\n",
     "                \"nlp_processed\": True,\n",
     "                \"entities\": entities,\n",
     "                \"sentiment\": sentiment,\n",
+    "                \"vector\": vector,  # Add vector to the enriched data\n",
     "            }\n",
     "\n",
     "            es.update_article(index=\"rss_feeds\", id=article[\"_id\"], body=enriched_data)\n",
