feat: Update rss_feed_operator to use transformers and sentence_transformers instead of spacy

--- a/notebooks/es_dsl_search.ipynb
+++ b/notebooks/es_dsl_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "<Elasticsearch(['http://localhost:9200'])>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,65 +52,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No model was supplied, defaulted to distilbert/distilbert-base-uncased-finetuned-sst-2-english and revision af0f99b (https://huggingface.co/distilbert/distilbert-base-uncased-finetuned-sst-2-english).\n",
+      "Using a pipeline without specifying a model name and revision in production is not recommended.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "300\n",
-      "[\u001b[34m2024-08-31T09:28:56.164+0800\u001b[0m] {\u001b[34m_transport.py:\u001b[0m349} INFO\u001b[0m - POST http://localhost:9200/rss_feeds/_search [status:200 duration:0.005s]\u001b[0m\n",
-      "Kadiri: uod sa utak atbp. mga parasito\n",
-      "NAHIHIBANG umano si Robert F. Kennedy Jr. sa pagkan­didatong presidente.\n",
-      "\n",
-      "\n",
-      "Jenna Ortega shuts down past Johnny Depp dating rumor\n",
-      "Actress Jenna Ortega laughed off the rumor that she dated Johnny Depp.\n",
-      "\n",
-      "\n",
-      "Aubrey, pitong buwan niligawan ni Troy\n",
-      "Ikinuwento nina Aubrey Miles at Troy Montero ang una nilang pagkikita. Ayon sa aktres, inakala niya noong una na walang gusto sa kaniya ang aktor.\n",
-      "\n",
-      "\n",
-      "Glaiza De Castro at David Rainey, plano na kayang magkaanak?\n",
-      "Matapos na ikasal, plano na kaya agad nina Glaiza De Castro at David Rainey na bumuo ng sarili nilang pamilya?\n",
-      "\n",
-      "\n",
-      "Partido ni Pangulong Marcos pinanumpa pambatong alkalde sa Pasig\n",
-      "Tiyak na mapapalaban umano si Mayor Vico Sotto sa darating na 2025 midterm election matapos manumpa na bilang miyembro ng Partido Federal ng Pilipinas ang tinawag nitong “winnable mayoralty bet” nito sa Pasig City.\n",
-      "\n",
-      "\n"
+      "0.3392058203934381 Lauren Lior-Liechtenstein's journey from the arts to medicine\n",
+      "0.4280747579199786 MMDC, Concentrix prop up working students\n",
+      "-0.01880078985642257 Piolo gagawin ang buhay nina Magalong at Marcos; handang i-give up ang lahat para sa reunion nila ni Juday\n",
+      "0.36797330752791274 Spotlight: the UAP's 17th Likha Awardee\n",
+      "0.41667625766460326 Leading the way to develop multi-skilled Filipinos\n",
+      "5\n"
      ]
     }
    ],
    "source": [
-    "# Load the NLP model\n",
+    "from transformers import pipeline\n",
+    "from sentence_transformers import SentenceTransformer\n",
+    "\n",
+    "# Specify the sentiment analysis model\n",
+    "model_name = \"distilbert/distilbert-base-uncased-finetuned-sst-2-english\"\n",
+    "sentiment_pipeline = pipeline(\"sentiment-analysis\", model=model_name, device=-1)  # device=-1 ensures CPU usage\n",
+    "\n",
+    "# Load the sentiment analysis and embedding models\n",
+    "sentiment_pipeline = pipeline(\"sentiment-analysis\", device=-1)  # device=-1 ensures CPU usage\n",
+    "embedding_model = SentenceTransformer('all-MiniLM-L6-v2', device='cpu')  # Ensure CPU usage\n",
     "nlp = spacy.load(\"en_core_web_md\")\n",
     "\n",
-    "query = \"Yulo\"\n",
-    "vector = nlp(query).vector\n",
-    "print(len(vector))\n",
+    "input = \"Data careers\"\n",
+    "# Use Hugging Face for sentiment analysis\n",
+    "sentiment_result = sentiment_pipeline(input[:512])  # Truncate to 512 tokens if necessary\n",
+    "sentiment = sentiment_result[0]['score'] if sentiment_result else 0.0\n",
+    "\n",
+    "# Use SentenceTransformers for embeddings\n",
+    "vector = embedding_model.encode(input).tolist()\n",
+    "\n",
+    "\n",
+    "# # Convert the vector to a list and join with commas\n",
+    "# vector_list = vector.tolist()\n",
+    "# vector_str = ', '.join(map(str, vector_list))\n",
+    "# print(f\"Query vector:\\n[{vector_str}]\")\n",
     "\n",
     "s = Article.search(index=\"rss_feeds\")\n",
-    "s = s.knn(field=\"embedding\", k=5, num_candidates=10, query_vector=vector.tolist())\n",
+    "s = s.knn(field=\"embedding\", k=5, num_candidates=10, query_vector=vector)\n",
+    "# print(\"Elasticsearch query:\", s.to_dict())\n",
+    "\n",
     "response = s.execute()\n",
+    "# print(\"Raw response:\", response.to_dict())\n",
     "for hit in response:\n",
-    "    print(hit.title)\n",
-    "    print(hit.summary)\n",
-    "    print(\"\\n\")"
+    "    # print(hit.summary)\n",
+    "#     # print(hit.embedding)\n",
+    "    hit_doc = nlp(hit.summary)\n",
+    "    query = nlp(input)\n",
+    "    similarity = query.similarity(hit_doc)\n",
+    "    print(similarity, hit.title)\n",
+    "#     print(\"\\n\")\n",
+    "print(len(response.hits))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\u001b[34m2024-08-31T09:27:18.016+0800\u001b[0m] {\u001b[34m_transport.py:\u001b[0m349} INFO\u001b[0m - POST http://localhost:9200/rss_feeds/_search [status:200 duration:0.016s]\u001b[0m\n",
+      "MORE FOR CALOY\n",
+      "\n",
+      "\n",
       "‘Laruang de baterya’: Carlos Yulo amuses with ‘Maybe This Time’ dance trend take\n",
       "\n",
       "\n",
@@ -120,25 +141,22 @@
       "Yulo gets house and lot from Century Properties\n",
       "\n",
       "\n",
+      "Caloy may payo sa kapatid\n",
+      "\n",
+      "\n",
       "Castañeda receives recognition in Cebu\n",
       "\n",
       "\n",
-      "Francis Libiran and Carlos Yulo 'collaborate' for fashion design inspiration\n",
+      "WATCH: Yulo recalls struggles\n",
       "\n",
       "\n",
-      "Carlos Yulo gets Land Cruiser Prado reward from Toyota\n",
+      "Carlos Yulo open to join 'Batang Quiapo'\n",
       "\n",
       "\n",
-      "Chery Auto gifts Carlos Yulo a Tiggo 7, lifetime free oil change\n",
+      "Yulo inspirasyon ng mga Kabataan\n",
       "\n",
       "\n",
-      "Carlos Yulo also had to do mental gymnastics --psychologist Anna Tuazon\n",
-      "\n",
-      "\n",
-      "The shortness of Carlos Yulo\n",
-      "\n",
-      "\n",
-      "Young Pinay gymnast in UAE inspired by Carlos Yulo's double gold win\n",
+      "Carlos Yulo ka-look alike Andres Santos meets Olympic champ, GF Chloe San Jose\n",
       "\n",
       "\n"
      ]
