feat: Add OpenAI integration and chat endpoint

--- a/notebooks/reindex_es.ipynb
+++ b/notebooks/reindex_es.ipynb
@@ -103,21 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_57854/2317237416.py:51: DeprecationWarning: Passing transport options in the API method is deprecated. Use 'Elasticsearch.options()' instead.\n",
+      "/tmp/ipykernel_386314/2317237416.py:51: DeprecationWarning: Passing transport options in the API method is deprecated. Use 'Elasticsearch.options()' instead.\n",
       "  es.indices.delete(index=index_name, ignore=[400, 404])\n",
-      "2024-08-31 00:25:38,516 - INFO - Resurrected node <Urllib3HttpNode(http://localhost:9200)> (force=False)\n",
-      "2024-08-31 00:25:38,579 - INFO - DELETE http://localhost:9200/rss_feed [status:200 duration:0.062s]\n",
-      "2024-08-31 00:25:38,580 - WARNING - Node <Urllib3HttpNode(http://localhost:9200)> has been marked alive after a successful request\n",
-      "/tmp/ipykernel_57854/2317237416.py:51: ElasticsearchWarning: Elasticsearch built-in security features are not enabled. Without authentication, your cluster could be accessible to anyone. See https://www.elastic.co/guide/en/elasticsearch/reference/7.17/security-minimal-setup.html to enable security.\n",
-      "  es.indices.delete(index=index_name, ignore=[400, 404])\n",
-      "2024-08-31 00:25:38,587 - INFO - Deleted index: rss_feed\n"
+      "2024-09-06 22:01:14,871 - INFO - DELETE http://localhost:9200/rss_feeds [status:200 duration:0.071s]\n",
+      "2024-09-06 22:01:14,872 - INFO - Deleted index: rss_feeds\n"
      ]
     }
    ],
